# TradeTicksAnalyzer

./: .gitignore  CMakeLists.txt  CMakeMacros.cmake
TradeTicksAnalyzer/: CMakeLists.txt  TradeTicksAnalyzerMain.cpp
libTradeTicksAnalyzer/: CMakeLists.txt  pch.h
libTradeTicksAnalyzer/Components/: TradeTicksAnalyzerProgram.cpp  TradeTicksAnalyzerProgram.h
libTradeTicksAnalyzer/Components/Args/: CalculateTradeTickLatencyStatisticsArgsParser.cpp  CalculateTradeTickLatencyStatisticsArgsParser.h  FindPossibleBadBinaryTradeTicksArgsParser.cpp  FindPossibleBadBinaryTradeTicksArgsParser.h  FindPossibleBadTextTradeTicksArgsParser.cpp  FindPossibleBadTextTradeTicksArgsParser.h  FindPossibleBadTradeTicksArgsParser.cpp  FindPossibleBadTradeTicksArgsParser.h  ProgramModeAArgsParser.cpp  ProgramModeAArgsParser.h  ProgramModeBArgsParser.cpp  ProgramModeBArgsParser.h  ProgramModeDeterminer.cpp  ProgramModeDeterminer.h  ProgramModeSpecificArgsParserDispatcher.cpp  ProgramModeSpecificArgsParserDispatcher.h  TradeTicksAnalyzerArgsParser.cpp  TradeTicksAnalyzerArgsParser.h
libTradeTicksAnalyzer/Components/Determiners/: BadTradeTicksDeterminer.cpp  BadTradeTicksDeterminer.h
libTradeTicksAnalyzer/Components/Finders/: BadTradeTicksFinder.cpp  BadTradeTicksFinder.h  BadTradeTicksFinderAndFilesWriter.cpp  BadTradeTicksFinderAndFilesWriter.h
libTradeTicksAnalyzer/Components/MessageWriters/: LibTickDataMessageWriter.cpp  LibTickDataMessageWriter.h  TradeTicksAnalyzerMessageWriter.cpp  TradeTicksAnalyzerMessageWriter.h
libTradeTicksAnalyzer/Components/SubPrograms/: CalculateTradeTickLatencyStatisticsSubProgram.cpp  CalculateTradeTickLatencyStatisticsSubProgram.h  FindPossibleBadBinaryTradeTicksSubProgram.cpp  FindPossibleBadBinaryTradeTicksSubProgram.h  FindPossibleBadTextTradeTicksSubProgram.cpp  FindPossibleBadTextTradeTicksSubProgram.h  FindPossibleBadTradeTicksSubProgram.cpp  FindPossibleBadTradeTicksSubProgram.h  ProgramModeASubProgram.cpp  ProgramModeASubProgram.h  ProgramModeBSubProgram.cpp  ProgramModeBSubProgram.h  SubProgram.cpp  SubProgram.h  SubProgramFactory.cpp  SubProgramFactory.h
libTradeTicksAnalyzer/Enums/: ProgramMode.cpp  ProgramMode.h
libTradeTicksAnalyzer/ValueTypes/: TradeTicksAnalyzerArgMaps.cpp  TradeTicksAnalyzerArgMaps.h  TradeTicksAnalyzerArgs.cpp  TradeTicksAnalyzerArgs.h
libTradeTicksAnalyzerTests/: CMakeLists.txt  libTradeTicksAnalyzerTestsMain.cpp  pch.h
libTradeTicksAnalyzerTests/Components/: TradeTicksAnalyzerProgramTests.cpp
libTradeTicksAnalyzerTests/Components/Args/: CalculateTradeTickLatencyStatisticsArgsParserTests.cpp  FindPossibleBadBinaryTradeTicksArgsParserTests.cpp  FindPossibleBadTextTradeTicksArgsParserTests.cpp  FindPossibleBadTradeTicksArgsParserTests.cpp  ProgramModeAArgsParserTests.cpp  ProgramModeBArgsParserTests.cpp  ProgramModeDeterminerTests.cpp  ProgramModeSpecificArgsParserDispatcherTests.cpp  TradeTicksAnalyzerArgsParserTests.cpp
libTradeTicksAnalyzerTests/Components/Determiners/: BadTradeTicksDeterminerTests.cpp
libTradeTicksAnalyzerTests/Components/Finders/: BadTradeTicksFinderAndFilesWriterTests.cpp  BadTradeTicksFinderTests.cpp
libTradeTicksAnalyzerTests/Components/MessageWriters/: LibTickDataMessageWriterTests.cpp  TradeTicksAnalyzerMessageWriterTests.cpp
libTradeTicksAnalyzerTests/Components/SubPrograms/: CalculateTradeTickLatencyStatisticsSubProgramTests.cpp  FindPossibleBadBinaryTradeTicksSubProgramTests.cpp  FindPossibleBadTextTradeTicksSubProgramTests.cpp  FindPossibleBadTradeTicksSubProgramTests.cpp  ProgramModeASubProgramTests.cpp  ProgramModeBSubProgramTests.cpp  SubProgramFactoryTests.cpp  (+1 more)
libTradeTicksAnalyzerTests/Enums/: ProgramModeTests.cpp
libTradeTicksAnalyzerTests/ValueTypes/: TradeTicksAnalyzerArgMapsTests.cpp  TradeTicksAnalyzerArgsTests.cpp
(+77 files in other folders)
